--- a/src/pages/property/featured-2.astro
+++ b/src/pages/property/featured-2.astro
@@ -1,6 +1,6 @@
 ---
 import '../../styles/global.css';
-import Navigation from '../../components/Navigation.tsx';
+import Navigation from '../../components/Navigation';
 import Footer from '../../components/Footer.astro';
 
 const title = "$648,500 Highland Home - Featured Property | Christian Fuentes";
